# llm-arbitration-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  portfolio_narrative.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AnalyticsView.tsx  ArbitrateView.tsx  CriticColumns.tsx  HistoryView.tsx  ScoreRing.tsx  VerdictPanel.tsx
frontend/src/lib/: highlight.tsx
scripts/: run_critics.py  run_graph.py  show_arbitration.py
src/: config.py  service.py
src/adjudicator/: adjudicator.py
src/analytics/: metrics.py
src/api/: main.py  routes.py  schemas.py
src/critics/: __init__.py  accuracy_critic.py  base.py  completeness_critic.py  logic_critic.py  providers.py
src/disagreement/: detector.py
src/graph/: build_graph.py  nodes.py  state.py
src/schemas/: critique.py  verdict.py
src/storage/: db.py
tests/: test_api.py  test_detector.py  test_graph.py  test_render.py  test_schemas.py  test_storage.py
tests/fixtures/: factually_incorrect.json  genuinely_good.json  logically_flawed.json  misses_the_point.json
ui/: app.py  render.py
